<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <com.flaviofaria.kenburnsview.KenBurnsView
            android:id="@+id/image_itemAPOD"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:contentDescription="@string/content_description_media_apod"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/photo_item_apod" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/title_itemAPOD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_item_apod"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:id="@+id/description_itemAPOD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="3"
                android:text="@string/secondary_text_item_apod"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:id="@+id/date_itemAPOD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/supporting_text_item_apod"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/favorites_itemAPOD"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/action_1_item_apod"
                app:icon="@drawable/ic_favorite_border" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/share_itemAPOD"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_2_item_apod"
                app:icon="@drawable/ic_share_border" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>